--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="icon" href="src/front/assets/img/FINALLOGO.png" />
+    <link rel="icon" type="icon" href="src/front/assets/img/rigo-baby.jpg" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
